--- a/practice.html
+++ b/practice.html
@@ -26,7 +26,7 @@ List of games:</p>
 <hr>
 
 <!-- SHORTCUT "CTRL + /" -->
-
+<img height="400px" src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8yX3Bob3RvX29mX2FfbGlvbl9pc29sYXRlZF9vbl9jb2xvcl9iYWNrZ3JvdW5kXzJhNzgwMjM1LWRlYTgtNDMyOS04OWVjLTY3ZWMwNjcxZDhiMV8xLmpwZw.jpg">
 <p style="color: crimson" >My name is  <strong>Tarik</strong> <br>
 My age is 24 <br>
 My job will be <em><u>Developer :)</u></em>
