--- a/practice.html
+++ b/practice.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body style="background: silver">
+
+<a href="index.html">My first html page</a>
+<br>
+<hr>
+<a href="table.html">TABLE</a>
+<br>
+<hr>
+
+<!--add link <a href= "www.link.com">IMDB </a> -->
+
+<a href="https://www.google.com/">Google Search</a>
+
+<br>
+<hr>
+
+<h3>Practice #8</h3>
+<p>Car Reviews:</p>
+<ul>
+    <li><a href="KBB.com">KBB</a></li>
+    <li><a href="http://www.EDMUNDS.com">EDMUNDS</a></li>
+    <li><a href="http://www.CARMAX.com">CARMAX</a></li>
+</ul>
+hr
 
 <p>Create a LIST. <br>
 List of games:</p>
@@ -52,20 +76,23 @@ My job will be <em><u>Developer :)</u></em>
 <!-- <hr/> is line ---- !!!! -->
 
 <h2>My first paragraph</h2>
+<div style="font-family: 'Bodoni MT Black'">
 <p style="color: purple">paragraph paragraph paragraph paragraph paragraph paragraph paragraph
   paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph
   paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph
   paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph
-</p><hr/>
+</p><hr/></div>
 <h2>My second paragraph</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, dolorum iste natus non <br>
   odio placeat ratione reiciendis repudiandae sapiente unde. Beatae distinctio dolore ea
   illum iure laborum omnis porro praesentium?</p>
+
+<div style="background-color: aqua">
 <h2>My third paragraph</h2><hr/>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi architecto atque blanditiis distinctio
     <br>
     dolorum et illo ipsum itaque, labore nam, non optio quidem sed sint sit veniam vitae voluptatum.</p>
-
+</div>
 
 </body>
 </html>
